--- a/src/stylesheets/modules/_header.scss
+++ b/src/stylesheets/modules/_header.scss
@@ -14,6 +14,7 @@
 @media screen and (max-width: 450px) {  
   .header {
     justify-content: center;
+    @include bgImage("../images/25u6xk0.jpg", 33vh);
   }
 
   .title {
