--- a/src/stylesheets/modules/_life.scss
+++ b/src/stylesheets/modules/_life.scss
@@ -10,6 +10,7 @@
     // width: 50px;
     color: $white;
     flex: 1;
+    flex-basis: auto;
     justify-content: center;
     border: 1px solid $black;
 }
