--- a/src/stylesheets/modules/_navigation.scss
+++ b/src/stylesheets/modules/_navigation.scss
@@ -15,6 +15,10 @@
     }
 }
 
+.nav-bar-smooth {
+    transition: 0s;
+}
+
 .nav-list {
     list-style: none;
     margin: 0;
